--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -9,20 +9,19 @@ CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_GRUB_EFI_IMAGES=y
-CONFIG_GRUB_TIMEOUT=2
+CONFIG_GRUB_TIMEOUT=1
 
 # ======================
-# 编译工具链与优化 - GCC版本
+# 编译工具链与优化 - GCC极致优化
 # ======================
-# CONFIG_DEVEL is not set
 CONFIG_TOOLCHAINOPTS=y
-CONFIG_USE_LTO=y
+CONFIG_GCC_USE_GRAPHITE=y
+CONFIG_GCC_USE_LTO=y
 CONFIG_KERNEL_LTO=y
 CONFIG_GCC_OPTIMIZE_FAST_MATH=y
 CONFIG_GCC_OPTIMIZE_FOR_PERFORMANCE=y
-# 优化配置统一
-CONFIG_EXTRA_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
-CONFIG_TARGET_OPTIMIZATION="-O3 -pipe -march=x86-64-v2"
+CONFIG_EXTRA_OPTIMIZATION="-O3 -march=goldmont-plus -mtune=goldmont-plus -pipe -fno-plt -fno-caller-saves"
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=goldmont-plus -mtune=goldmont-plus -pipe"
 CONFIG_OPTIMIZE_FOR_SIZE=n
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
@@ -37,15 +36,16 @@ CONFIG_PCI=y
 CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_X86_INTEL_LPSS=y
+CONFIG_X86_AMD_PLATFORM_DEVICE=y
 
 # ======================
-# CPU调度与频率优化 (低延迟+低CPU占用)
+# CPU调度与频率优化 (极致低延迟)
 # ======================
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=n
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=n
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
 CONFIG_CPU_FREQ_GOV_ONDEMAND=n
 CONFIG_CPU_FREQ_GOV_USERSPACE=n
@@ -58,25 +58,27 @@ CONFIG_PREEMPT=y
 CONFIG_PREEMPT_VOLUNTARY=n
 CONFIG_PREEMPT_COUNT=y
 CONFIG_PREEMPT_NOTIFIERS=y
-CONFIG_HAVE_PREEMPT_LAZY=y
+CONFIG_PREEMPT_LAZY=y
 
 # ======================
 # 中断与进程调度优化
 # ======================
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_FORCED_THREADING=n
-CONFIG_TASK_IO_ACCOUNTING=y
+CONFIG_IRQ_FORCED_THREADING=y    # 改为y：改善网络响应
+CONFIG_TASK_IO_ACCOUNTING=n      # 改为n：减少开销
 CONFIG_PSI=y
 CONFIG_PSI_DEFAULT_DISABLED=n
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_BSD_PROCESS_ACCT=y
+CONFIG_BSD_PROCESS_ACCT=n        # 改为n：路由器不需要进程记账
 CONFIG_TICK_CPU_ACCOUNTING=y
 CONFIG_VIRT_CPU_ACCOUNTING=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_BALANCE=y
+CONFIG_GENERIC_IRQ_SHOW=y
+CONFIG_GENERIC_IRQ_CHIP=y
 
 # ======================
 # 时间与时钟精度优化
@@ -91,14 +93,15 @@ CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
-CONFIG_TIMER_STATS=n
+CONFIG_HZ_PERIODIC=n
+CONFIG_HZ_1000=y
 
 # ======================
 # 内存管理优化 (8GB专用)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=128
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=256
 CONFIG_SLUB_DEBUG=n
 CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
@@ -109,8 +112,8 @@ CONFIG_DEFERRED_STRUCT_PAGE_INIT=n
 CONFIG_PAGE_IDLE_FLAG=y
 CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=512
-CONFIG_CMA_SIZE_PERCENTAGE=20
+CONFIG_CMA_SIZE_MBYTE=1024
+CONFIG_CMA_SIZE_PERCENTAGE=30
 CONFIG_DMA_CMA=y
 CONFIG_ZONE_DMA32=y
 CONFIG_NUMA=n
@@ -124,6 +127,7 @@ CONFIG_ZRAM=n
 CONFIG_SWAP=n
 CONFIG_FRONTSWAP=n
 CONFIG_CLEANCACHE=n
+CONFIG_LRU_GEN=n
 
 # ======================
 # Intel硬件优化 (J4125+I226) - 极致性能
@@ -147,12 +151,15 @@ CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+CONFIG_NET_RX_BUSY_POLL_BUDGET=128
 CONFIG_DMA_DIRECT_REMAP=y
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI_PCIE=y
+CONFIG_PCI_IOV=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
 
 # ======================
 # 网络硬件加速配置
@@ -161,9 +168,6 @@ CONFIG_HAVE_EISA=y
 CONFIG_HAVE_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_PCI_IOV=y
-CONFIG_PCI_PRI=y
-CONFIG_PCI_PASID=y
 CONFIG_PCIEAER=y
 CONFIG_HOTPLUG_PCI=y
 CONFIG_HOTPLUG_PCI_ACPI=y
@@ -174,25 +178,26 @@ CONFIG_DIMLIB=y
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_NET_SWITCHDEV=y
 CONFIG_NET_L3_MASTER_DEV=y
+CONFIG_NET_VENDOR_INTEL=y
 
 # ======================
 # 网络协议栈深度优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
 CONFIG_DEFAULT_TCP_CONG="bbr2"
-CONFIG_TCP_BBR2_FLOOR=10
+CONFIG_TCP_BBR2_FLOOR=5
 CONFIG_TCP_BBR2_ECN=y
 CONFIG_TCP_BBR2_ECN_AGGR=y
 CONFIG_TCP_BBR2_DCTCP_RTT=y
-CONFIG_TCP_BBR2_INFLIGHT_GAIN=2
+CONFIG_TCP_BBR2_INFLIGHT_GAIN=3
 CONFIG_TCP_BBR2_INFLIGHT_RTT=y
 CONFIG_TCP_BBR2_PROBE_RTT=y
-CONFIG_TCP_BBR2_PROBE_RTT_GAIN=1
-CONFIG_TCP_BBR2_PROBE_RTT_INTVL=5
+CONFIG_TCP_BBR2_PROBE_RTT_GAIN=2
+CONFIG_TCP_BBR2_PROBE_RTT_INTVL=3
 CONFIG_TCP_BBR2_PROBE_RTT_LEN=1
-CONFIG_TCP_KEEPALIVE_INTVL=20
-CONFIG_TCP_KEEPALIVE_PROBES=5
-CONFIG_TCP_FIN_TIMEOUT=10
+CONFIG_TCP_KEEPALIVE_INTVL=30
+CONFIG_TCP_KEEPALIVE_PROBES=3
+CONFIG_TCP_FIN_TIMEOUT=5
 CONFIG_TCP_RETRANS_COLLAPSE=n
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
@@ -218,6 +223,7 @@ CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
 CONFIG_NET_IPGRE_BROADCAST=y
 CONFIG_NET_IPVTI=y
+CONFIG_NET_MPLS_GSO=n
 
 # ======================
 # 网络队列管理优化
@@ -237,6 +243,11 @@ CONFIG_NET_CLS_FLOW=y
 CONFIG_NET_CLS_ROUTE4=y
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_TCINDEX=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_ACT_GACT=y
+CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_ACT_SKBEDIT=y
 
 # ======================
 # NFTables防火墙配置 (高性能)
@@ -271,6 +282,9 @@ CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NFT_SYNPROXY=y
 CONFIG_NFT_OSF=y
 CONFIG_NFT_TPROXY=y
+CONFIG_NFT_FIB=y
+CONFIG_NFT_FIB_IPV4=y
+CONFIG_NFT_FIB_IPV6=y
 
 # ======================
 # I/O调度优化
@@ -285,6 +299,7 @@ CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
 CONFIG_BLK_CGROUP_IOCOST=y
 CONFIG_BLK_DEBUG_FS=n
+CONFIG_BLK_INLINE_ENCRYPTION=n
 
 # ======================
 # 电源管理优化 (性能优先)
@@ -299,6 +314,8 @@ CONFIG_ACPI=y
 CONFIG_ACPI_THERMAL=y
 CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_IDLE=y
+CONFIG_ACPI_CPU_FREQ_PSS=y
+CONFIG_ACPI_PROCESSOR=y
 
 # ======================
 # 内核模块配置 - 极致性能
@@ -331,6 +348,8 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
+CONFIG_PACKAGE_kmod-igc=y
+CONFIG_PACKAGE_kmod-dma-buf=y
 
 # ======================
 # 加密与硬件加速
@@ -355,6 +374,8 @@ CONFIG_PACKAGE_kmod-crypto-cbc=y
 CONFIG_PACKAGE_kmod-crypto-xts=y
 CONFIG_PACKAGE_kmod-crypto-user=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_CRYPTO_CRC32C_INTEL=y
+CONFIG_CRYPTO_CRC32_PCLMUL=y
 
 # ======================
 # 用户态工具包 - 性能监控
@@ -380,6 +401,7 @@ CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpcre=y
 CONFIG_PACKAGE_libpcre2=y
+CONFIG_PACKAGE_htop=y
 
 # ======================
 # LuCI应用模块
@@ -414,6 +436,8 @@ CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_blkid=y
 CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lsb-release=y
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_vim-full=y
 
 # ======================
 # 网络服务配置
@@ -510,6 +534,10 @@ CONFIG_FB=n
 CONFIG_VGA_ARB=n
 CONFIG_DRM=n
 CONFIG_AGP=n
+CONFIG_INPUT_TOUCHSCREEN=n
+CONFIG_INPUT_MOUSE=n
+CONFIG_INPUT_KEYBOARD=n
+CONFIG_SERIAL_8250=n
 
 # ======================
 # 内核调试移除 (减小体积)
@@ -525,3 +553,9 @@ CONFIG_PROFILING=n
 CONFIG_FTRACE=n
 CONFIG_KPROBES=n
 CONFIG_NET_DROP_MONITOR=n
+CONFIG_DEBUG_INFO=n
+CONFIG_DEBUG_INFO_DWARF4=n
+CONFIG_DEBUG_INFO_REDUCED=n
+CONFIG_DEBUG_INFO_SPLIT=n
+CONFIG_DEBUG_INFO_BTF=n
+CONFIG_FRAME_POINTER=n
