--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -12,17 +12,16 @@ CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_GRUB_TIMEOUT=1
 
 # ======================
-# 编译工具链与优化 - GCC极致优化
+# 编译工具链优化
 # ======================
+CONFIG_DEVEL=y
+CONFIG_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_TOOLCHAINOPTS=y
 CONFIG_GCC_USE_GRAPHITE=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_GCC_OPTIMIZE_FAST_MATH=y
 CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe"
 CONFIG_OPTIMIZE_INLINING=y
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_USE_MKLIBS=n
 
 # ======================
 # x86架构核心配置
@@ -34,10 +33,9 @@ CONFIG_PCI_MSI=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_X86_INTEL_LPSS=y
-CONFIG_X86_AMD_PLATFORM_DEVICE=y
 
 # ======================
-# CPU调度与频率优化 (极致低延迟)
+# CPU调度与频率优化
 # ======================
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -47,70 +45,48 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=n
 CONFIG_CPU_FREQ_GOV_ONDEMAND=n
 CONFIG_CPU_FREQ_GOV_USERSPACE=n
 CONFIG_INTEL_PSTATE=y
-CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
-CONFIG_SCHED_CORE=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_VOLUNTARY=n
-CONFIG_PREEMPT_COUNT=y
-CONFIG_PREEMPT_NOTIFIERS=y
-CONFIG_PREEMPT_LAZY=y
 
 # ======================
 # 中断与进程调度优化
 # ======================
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_IRQ_FORCED_THREADING=y    # 改为y：改善网络响应
-CONFIG_TASK_IO_ACCOUNTING=n      # 改为n：减少开销
+CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_PSI=y
 CONFIG_PSI_DEFAULT_DISABLED=n
 CONFIG_SCHED_AUTOGROUP=y
-CONFIG_BSD_PROCESS_ACCT=n        # 改为n：路由器不需要进程记账
-CONFIG_TICK_CPU_ACCOUNTING=y
-CONFIG_VIRT_CPU_ACCOUNTING=y
-CONFIG_SCHED_HRTICK=y
+CONFIG_BSD_PROCESS_ACCT=n
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_BALANCE=y
-CONFIG_GENERIC_IRQ_SHOW=y
-CONFIG_GENERIC_IRQ_CHIP=y
 
 # ======================
 # 时间与时钟精度优化
 # ======================
 CONFIG_NO_HZ_IDLE=y
 CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_NO_HZ=y
-CONFIG_CONTEXT_TRACKING=y
-CONFIG_CONTEXT_TRACKING_FORCE=y
-CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
-CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_BSD_PROCESS_ACCT_V3=y
+CONFIG_HZ_300=y
 CONFIG_HZ_PERIODIC=n
-CONFIG_HZ_1000=y
+CONFIG_HZ_1000=n
 
 # ======================
-# 内存管理优化 (8GB专用)
+# 内存管理优化 (专注网络性能)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=256
-CONFIG_SLUB_DEBUG=n
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=128
 CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
-CONFIG_DEFERRED_STRUCT_PAGE_INIT=n
-CONFIG_PAGE_IDLE_FLAG=y
-CONFIG_IDLE_PAGE_TRACKING=y
 CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=1024
-CONFIG_CMA_SIZE_PERCENTAGE=30
+CONFIG_CMA_SIZE_MBYTE=256
+CONFIG_CMA_SIZE_PERCENTAGE=15
 CONFIG_DMA_CMA=y
 CONFIG_ZONE_DMA32=y
 CONFIG_NUMA=n
@@ -122,12 +98,9 @@ CONFIG_ZSMALLOC=n
 CONFIG_ZSWAP=n
 CONFIG_ZRAM=n
 CONFIG_SWAP=n
-CONFIG_FRONTSWAP=n
-CONFIG_CLEANCACHE=n
-CONFIG_LRU_GEN=n
 
 # ======================
-# Intel硬件优化 (J4125+I226) - 极致性能
+# Intel硬件优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
@@ -140,36 +113,24 @@ CONFIG_IGC_LRO=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
 CONFIG_IGC_VMDQ=y
-CONFIG_IGC_SRIOV=y
 CONFIG_IGC_HWMON=y
-CONFIG_IGC_DCA=y
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=128
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
 CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_HOTPLUG_PCI_PCIE=y
-CONFIG_PCI_IOV=y
-CONFIG_PCI_PRI=y
-CONFIG_PCI_PASID=y
 
 # ======================
 # 网络硬件加速配置
 # ======================
-CONFIG_HAVE_EISA=y
-CONFIG_HAVE_PCI=y
 CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_PCIEAER=y
-CONFIG_HOTPLUG_PCI=y
-CONFIG_HOTPLUG_PCI_ACPI=y
-CONFIG_ACPI_HOTPLUG_PCI=y
-CONFIG_PCI_HOTPLUG=y
 CONFIG_NET_DEVLINK=y
 CONFIG_DIMLIB=y
 CONFIG_NET_FLOW_LIMIT=y
@@ -178,49 +139,30 @@ CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_NET_VENDOR_INTEL=y
 
 # ======================
-# 网络协议栈深度优化
+# 网络协议栈核心优化
 # ======================
 CONFIG_KERNEL_TCP_CONG_BBR2=y
 CONFIG_DEFAULT_TCP_CONG="bbr2"
-CONFIG_TCP_BBR2_FLOOR=5
 CONFIG_TCP_BBR2_ECN=y
 CONFIG_TCP_BBR2_ECN_AGGR=y
-CONFIG_TCP_BBR2_DCTCP_RTT=y
-CONFIG_TCP_BBR2_INFLIGHT_GAIN=3
-CONFIG_TCP_BBR2_INFLIGHT_RTT=y
 CONFIG_TCP_BBR2_PROBE_RTT=y
-CONFIG_TCP_BBR2_PROBE_RTT_GAIN=2
-CONFIG_TCP_BBR2_PROBE_RTT_INTVL=3
-CONFIG_TCP_BBR2_PROBE_RTT_LEN=1
 CONFIG_TCP_KEEPALIVE_INTVL=30
 CONFIG_TCP_KEEPALIVE_PROBES=3
 CONFIG_TCP_FIN_TIMEOUT=5
-CONFIG_TCP_RETRANS_COLLAPSE=n
-CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_AO=y
 CONFIG_TCP_FASTOPEN=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
 CONFIG_PACKET=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_INET_DIAG=n
-CONFIG_INET_TCP_DIAG=n
-CONFIG_INET_UDP_DIAG=n
 CONFIG_IPV6=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_INET_ESP=y
 CONFIG_INET_IPCOMP=y
 CONFIG_NET_UDP_TUNNEL=y
-CONFIG_NET_FOU=y
 CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
-CONFIG_NET_IPGRE_BROADCAST=y
 CONFIG_NET_IPVTI=y
-CONFIG_NET_MPLS_GSO=n
 
 # ======================
 # 网络队列管理优化
@@ -231,20 +173,13 @@ CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_CAKE=y
 CONFIG_NET_SCH_ETF=y
 CONFIG_NET_SCH_TAPRIO=y
-CONFIG_NET_SCH_ETS=y
 CONFIG_NET_SCH_MQPRIO_LIB=y
-CONFIG_NET_EMATCH=y
 CONFIG_NET_CLS=y
-CONFIG_NET_CLS_BASIC=y
 CONFIG_NET_CLS_FLOW=y
-CONFIG_NET_CLS_ROUTE4=y
 CONFIG_NET_CLS_FW=y
-CONFIG_NET_CLS_TCINDEX=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
-CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_ACT_SKBEDIT=y
 
 # ======================
 # NFTables防火墙配置 (高性能)
@@ -261,10 +196,7 @@ CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CONNTRACK_CHAIN_EVENTS=y
 CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CONNTRACK_PROCFS=n
-CONFIG_NF_CONNTRACK_SECMARK=n
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
@@ -277,7 +209,6 @@ CONFIG_NF_FLOW_TABLE_IPV4=y
 CONFIG_NF_FLOW_TABLE_IPV6=y
 CONFIG_NF_FLOW_TABLE_HW=y
 CONFIG_NFT_SYNPROXY=y
-CONFIG_NFT_OSF=y
 CONFIG_NFT_TPROXY=y
 CONFIG_NFT_FIB=y
 CONFIG_NFT_FIB_IPV4=y
@@ -288,25 +219,17 @@ CONFIG_NFT_FIB_IPV6=y
 # ======================
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
-CONFIG_IOSCHED_BFQ=n
-CONFIG_IOSCHED_CFQ=n
 CONFIG_DEFAULT_MQ_IOSCHED="kyber"
-CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
-CONFIG_BLK_CGROUP_IOCOST=y
-CONFIG_BLK_DEBUG_FS=n
-CONFIG_BLK_INLINE_ENCRYPTION=n
 
 # ======================
-# 电源管理优化 (性能优先)
+# 电源管理优化
 # ======================
 CONFIG_PM=y
 CONFIG_PM_SLEEP=y
 CONFIG_SUSPEND=y
 CONFIG_HIBERNATION=n
-CONFIG_PM_WAKELOCKS=n
-CONFIG_PM_DEBUG=n
 CONFIG_ACPI=y
 CONFIG_ACPI_THERMAL=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -315,38 +238,25 @@ CONFIG_ACPI_CPU_FREQ_PSS=y
 CONFIG_ACPI_PROCESSOR=y
 
 # ======================
-# 内核模块配置 - 极致性能
+# 内核模块配置 - 路由器核心
 # ======================
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-fib=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-offload=y
-CONFIG_PACKAGE_kmod-nft-queue=y
-CONFIG_PACKAGE_kmod-nft-nat6=y
-CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nf-conntrack=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
 CONFIG_PACKAGE_kmod-nf-nat=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nf-reject6=y
 CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-nf-log=y
-CONFIG_PACKAGE_kmod-nf-log2=y
-CONFIG_PACKAGE_kmod-nf-log4=y
-CONFIG_PACKAGE_kmod-nf-log6=y
 CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-igc=y
-CONFIG_PACKAGE_kmod-dma-buf=y
 
 # ======================
 # 加密与硬件加速
@@ -358,24 +268,15 @@ CONFIG_PACKAGE_kmod-crypto-ccm=y
 CONFIG_PACKAGE_kmod-crypto-ctr=y
 CONFIG_PACKAGE_kmod-crypto-ecb=y
 CONFIG_PACKAGE_kmod-crypto-gcm=y
-CONFIG_PACKAGE_kmod-crypto-gf128=y
-CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-sha1=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-crypto-sha512=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
 CONFIG_PACKAGE_kmod-crypto-null=y
-CONFIG_PACKAGE_kmod-crypto-seqiv=y
-CONFIG_PACKAGE_kmod-crypto-cmac=y
-CONFIG_PACKAGE_kmod-crypto-cbc=y
-CONFIG_PACKAGE_kmod-crypto-xts=y
-CONFIG_PACKAGE_kmod-crypto-user=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_CRYPTO_CRC32C_INTEL=y
-CONFIG_CRYPTO_CRC32_PCLMUL=y
 
 # ======================
-# 用户态工具包 - 性能监控
+# 用户态工具包 - 网络管理
 # ======================
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
@@ -383,25 +284,16 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_procps-ng=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_wget-ssl=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_perf=n
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
 CONFIG_PACKAGE_libnftnl=y
 CONFIG_PACKAGE_libmnl=y
 CONFIG_PACKAGE_nftables=y
-CONFIG_PACKAGE_nftables-json=y
-CONFIG_PACKAGE_libopenssl=y
-CONFIG_PACKAGE_libpcap=y
-CONFIG_PACKAGE_libpcre=y
-CONFIG_PACKAGE_libpcre2=y
 CONFIG_PACKAGE_htop=y
 
 # ======================
-# LuCI应用模块
+# LuCI应用模块 (基础)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
@@ -420,19 +312,10 @@ CONFIG_PACKAGE_luci-mod-admin-full=y
 # ======================
 CONFIG_PACKAGE_blockd=y
 CONFIG_PACKAGE_fdisk=y
-CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_pciutils=y
-CONFIG_PACKAGE_attr=y
-CONFIG_PACKAGE_acl=y
-CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_f2fs-tools=y
-CONFIG_PACKAGE_f2fsck=y
-CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_lscpu=y
-CONFIG_PACKAGE_lsb-release=y
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_vim-full=y
 
@@ -442,81 +325,36 @@ CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_dnsmasq-full=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-CONFIG_PACKAGE_dnsmasq_full_tftp=y
-CONFIG_PACKAGE_dnsmasq_full_ipset=n
-CONFIG_PACKAGE_dnsmasq_full_auth=y
 CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_dnsmasq_full_connmark=y
 CONFIG_PACKAGE_dnsmasq_full_nftset=y
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_ppp=y
 CONFIG_PACKAGE_ppp-mod-pppoe=y
-CONFIG_PACKAGE_ppp-mod-pptp=y
-CONFIG_PACKAGE_ppp-mod-pppol2tp=y
 
 # ======================
-# 系统安全加固 (性能友好)
+# 系统安全加固 (轻量级)
 # ======================
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
-CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_STRICT_DEVMEM=y
-CONFIG_IO_STRICT_DEVMEM=y
-CONFIG_SLAB_FREELIST_RANDOM=y
-CONFIG_SLAB_FREELIST_HARDENED=y
-CONFIG_SECURITY=y
-CONFIG_SECURITY_APPARMOR=y
-CONFIG_INIT_STACK_ALL=y
-CONFIG_SLAB_MERGE_DEFAULT=n
-CONFIG_RANDOMIZE_BASE=n
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_STATIC_USERMODEHELPER_PATH=""
-
-# ======================
-# 内核子系统配置
-# ======================
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_NAMESPACES=y
-CONFIG_KERNEL_UTS_NS=y
-CONFIG_KERNEL_IPC_NS=y
-CONFIG_KERNEL_USER_NS=y
-CONFIG_KERNEL_PID_NS=y
-CONFIG_KERNEL_NET_NS=y
-CONFIG_KERNEL_CGROUP_DEVICE=y
-CONFIG_KERNEL_CGROUP_FREEZER=y
-CONFIG_KERNEL_CGROUP_NET_PRIO=y
-CONFIG_KERNEL_CGROUP_PERF=y
-CONFIG_KERNEL_CGROUP_SCHED=y
 
 # ======================
 # 基础系统配置
 # ======================
 CONFIG_BUSYBOX_CONFIG_FEATURE_USE_INITTAB=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=100
-CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=50
 CONFIG_BUSYBOX_CONFIG_HUSH=y
 CONFIG_BUSYBOX_CONFIG_HUSH_HELP=y
-CONFIG_BUSYBOX_CONFIG_HUSH_INTERACTIVE=y
-CONFIG_BUSYBOX_CONFIG_HUSH_JOB=y
-CONFIG_BUSYBOX_CONFIG_HUSH_TICK=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_IF=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_LOOPS=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_FUNCTIONS=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_LOCAL=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_RANDOM_SUPPORT=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_EXPORT_N=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_HUSH_MODE_X=y
 
 # ======================
-# 硬件驱动精简
+# 移除所有非路由器硬件驱动
 # ======================
 CONFIG_SOUND=n
 CONFIG_HID=n
 CONFIG_NVMEM=n
-CONFIG_REGMAP_SPI=n
 CONFIG_WLAN_VENDOR_INTEL=n
 CONFIG_WLAN_VENDOR_ATH=n
 CONFIG_BT=n
@@ -537,7 +375,7 @@ CONFIG_INPUT_KEYBOARD=n
 CONFIG_SERIAL_8250=n
 
 # ======================
-# 内核调试移除 (减小体积)
+# 内核调试移除 (极致精简)
 # ======================
 CONFIG_DEBUG_KERNEL=n
 CONFIG_DEBUG_FS=n
