--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -34,14 +34,20 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_X86_INTEL_LPSS=y
 
 # ======================
-# CPU调度与频率优化
+# CPU调度与频率优化 (J4125专用)
 # ======================
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_INTEL_PSTATE=y
+CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_INTEL_CPUFREQ=y
 CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
+CONFIG_SCHED_CLUSTER=y
+CONFIG_SCHED_CORE=y
 
 # ======================
 # 中断与进程调度优化
@@ -54,6 +60,8 @@ CONFIG_SCHED_AUTOGROUP=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_BALANCE=y
+CONFIG_IRQ_POLL=y
+CONFIG_GENERIC_PENDING_IRQ=y
 
 # ======================
 # 时间与时钟精度优化
@@ -62,24 +70,33 @@ CONFIG_NO_HZ_IDLE=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ=y
 CONFIG_HZ_300=y
+CONFIG_PREEMPT_NONE=y
+CONFIG_TICK_CPU_ACCOUNTING=y
 
 # ======================
-# 内存管理优化 (专注网络性能)
+# 内存管理优化 (网络性能专用)
 # ======================
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_SLUB_CPU_PARTIAL_DEFAULT=128
+CONFIG_SLUB_CPU_PARTIAL_DEFAULT=256
 CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
 CONFIG_CMA=y
-CONFIG_CMA_SIZE_MBYTE=256
-CONFIG_CMA_SIZE_PERCENTAGE=15
+CONFIG_CMA_SIZE_MBYTE=384
+CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_CMA=y
 CONFIG_ZONE_DMA32=y
+CONFIG_NUMA=y
+CONFIG_NUMA_BALANCING=y
+CONFIG_COMPACTION=y
+CONFIG_MEMORY_HOTPLUG=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
 
 # ======================
-# Intel硬件优化 (J4125+I226)
+# Intel硬件深度优化 (J4125+I226)
 # ======================
 CONFIG_INTEL_IDLE=y
 CONFIG_IGC=y
@@ -93,23 +110,21 @@ CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
 CONFIG_IGC_VMDQ=y
 CONFIG_IGC_HWMON=y
+CONFIG_IGC_DEBUG=y
+CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_VLAN_INSERTION=y
+CONFIG_IGC_VLAN_FILTERING=y
+CONFIG_IGC_HW_TIMESTAMPING=y
+
+# ======================
+# 网络硬件卸载加速配置
+# ======================
 CONFIG_XPS=y
 CONFIG_RPS=y
 CONFIG_RFS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=64
-CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_HOTPLUG_CPU=y
-CONFIG_PCIEPORTBUS=y
-CONFIG_HOTPLUG_PCI_PCIE=y
-
-# ======================
-# 网络硬件加速配置
-# ======================
-CONFIG_PCI_DOMAINS=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_PCIEAER=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=128
 CONFIG_NET_DEVLINK=y
 CONFIG_DIMLIB=y
 CONFIG_NET_FLOW_LIMIT=y
@@ -118,17 +133,47 @@ CONFIG_NET_L3_MASTER_DEV=y
 CONFIG_NET_VENDOR_INTEL=y
 
 # ======================
-# 网络协议栈核心优化
+# DMA与内存映射优化
 # ======================
-CONFIG_KERNEL_TCP_CONG_BBR2=y
-CONFIG_DEFAULT_TCP_CONG="bbr2"
-CONFIG_TCP_BBR2_ECN=y
-CONFIG_TCP_BBR2_ECN_AGGR=y
-CONFIG_TCP_BBR2_PROBE_RTT=y
+CONFIG_DMA_DIRECT_REMAP=y
+CONFIG_DMA_CMA=y
+CONFIG_SWIOTLB=y
+CONFIG_IOMMU_SUPPORT=y
+CONFIG_IOMMU_DEFAULT=y
+CONFIG_INTEL_IOMMU=y
+CONFIG_INTEL_IOMMU_SVM=y
+CONFIG_INTEL_IOMMU_DEFAULT_ON=y
+CONFIG_DMA_REMAP=y
+CONFIG_DMA_SHARED_BUFFER=y
+
+# ======================
+# PCIe与硬件总线优化
+# ======================
+CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
+CONFIG_PCIEASPM=y
+CONFIG_PCIEASPM_PERFORMANCE=y
+CONFIG_PCIE_PTM=y
+CONFIG_PCI_MSI=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_PCIEAER=y
+CONFIG_PCI_IOV=y
+CONFIG_PCI_PRI=y
+CONFIG_PCI_PASID=y
+
+# ======================
+# 网络协议栈硬件卸载
+# ======================
+CONFIG_KERNEL_TCP_CONG_BBR=y
+CONFIG_DEFAULT_TCP_CONG="bbr"
+CONFIG_TCP_BBR_ECN=y
+CONFIG_TCP_BBR_ECN_AGGR=y
+CONFIG_TCP_BBR_PROBE_RTT=y
 CONFIG_TCP_KEEPALIVE_INTVL=30
 CONFIG_TCP_KEEPALIVE_PROBES=3
 CONFIG_TCP_FIN_TIMEOUT=5
 CONFIG_TCP_FASTOPEN=y
+CONFIG_TCP_FASTOPEN_KEY=y
 CONFIG_SYN_COOKIES=y
 CONFIG_UDP_GRO=y
 CONFIG_PACKET=y
@@ -142,9 +187,11 @@ CONFIG_NET_UDP_TUNNEL=y
 CONFIG_NET_IP_TUNNEL=y
 CONFIG_NET_IPGRE=y
 CONFIG_NET_IPVTI=y
+CONFIG_NET_FOU=y
+CONFIG_NET_FOU_IP_TUNNELS=y
 
 # ======================
-# 网络队列管理优化
+# 硬件流量分类与QoS卸载
 # ======================
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_SCH_FQ=y
@@ -159,9 +206,11 @@ CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_MIRRED=y
+CONFIG_NET_ACT_GACT=y
+CONFIG_NET_ACT_SKBEDIT=y
 
 # ======================
-# NFTables防火墙配置 (高性能)
+# NFTables硬件加速 (完全卸载支持)
 # ======================
 CONFIG_NETFILTER=y
 CONFIG_NF_TABLES=y
@@ -192,18 +241,39 @@ CONFIG_NFT_TPROXY=y
 CONFIG_NFT_FIB=y
 CONFIG_NFT_FIB_IPV4=y
 CONFIG_NFT_FIB_IPV6=y
+CONFIG_NFT_OFFLOAD=y
+CONFIG_NFT_XFRM=y
+CONFIG_NFT_QUEUE=y
+CONFIG_NFT_COMPAT=y
 
 # ======================
-# I/O调度优化
+# XDP快速数据路径 (硬件卸载)
+# ======================
+CONFIG_XDP_SOCKETS=y
+CONFIG_XDP_SOCKETS_DIAG=y
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_HAVE_EBPF_JIT=y
+CONFIG_BPF_EVENTS=y
+CONFIG_BPF_STREAM_PARSER=y
+CONFIG_NET_SOCK_MSG=y
+CONFIG_NET_XDP=y
+
+# ======================
+# I/O调度与存储优化
 # ======================
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_DEFAULT_MQ_IOSCHED="kyber"
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
+CONFIG_BLK_CGROUP=y
+CONFIG_BLK_DEV_THROTTLING=y
 
 # ======================
-# 电源管理优化
+# 电源管理优化 (J4125专用)
 # ======================
 CONFIG_PM=y
 CONFIG_PM_SLEEP=y
@@ -214,11 +284,13 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_IDLE=y
 CONFIG_ACPI_CPU_FREQ_PSS=y
 CONFIG_ACPI_PROCESSOR=y
+CONFIG_INTEL_RAPL=y
+CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_X86_ACPI_CPUFREQ=y
 
 # ======================
-# 内核模块配置 - 路由器核心
+# 内核模块配置 - 硬件加速核心
 # ======================
-CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-fib=y
 CONFIG_PACKAGE_kmod-nft-nat=y
@@ -234,23 +306,31 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
-CONFIG_PACKAGE_kmod-igc=y
+CONFIG_PACKAGE_kmod-macsec=y
+CONFIG_PACKAGE_kmod-dma-buf=y
+CONFIG_PACKAGE_kmod-dma-heap=y
 
 # ======================
-# 加密与硬件加速
+# 加密与硬件加速 (AES-NI)
 # ======================
 CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_CRYPTO_CRC32C_INTEL=y
+CONFIG_CRYPTO_SHA1_SSSE3=y
+CONFIG_CRYPTO_SHA256_SSSE3=y
+CONFIG_CRYPTO_CRCT10DIF_PCLMUL=y
+CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=y
+CONFIG_CRYPTO_USER_API=y
+CONFIG_CRYPTO_USER_API_AEAD=y
+CONFIG_CRYPTO_USER_API_SKCIPHER=y
 
 # ======================
-# 用户态工具包 - 网络管理
+# 用户态工具包 - 硬件监控与优化
 # ======================
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_procps-ng=y
-CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libnetfilter-conntrack=y
 CONFIG_PACKAGE_libnfnetlink=y
@@ -261,16 +341,19 @@ CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_gawk=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_coreutils-sort=y
+CONFIG_PACKAGE_hwloc-utils=y
+CONFIG_PACKAGE_lscpu=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_pciutils=y
 
 # ======================
-# LuCI应用模块 (基础)
+# LuCI应用模块 (网络优化版)
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-adblock-fast=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
