--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -19,8 +19,8 @@ CONFIG_TOOLCHAINOPTS=y
 CONFIG_GCC_USE_GRAPHITE=y
 CONFIG_USE_LTO=y
 CONFIG_KERNEL_LTO=y
-CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe"
 CONFIG_OPTIMIZE_INLINING=y
+CONFIG_TARGET_OPTIMIZATION="-O3 -march=x86-64-v2 -pipe -fno-semantic-interposition -fipa-pta"
 
 # ======================
 # x86架构核心配置
@@ -37,7 +37,8 @@ CONFIG_X86_INTEL_LPSS=y
 # CPU调度与频率优化 (J4125专用)
 # ======================
 CONFIG_CPU_FREQ=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
@@ -48,6 +49,7 @@ CONFIG_SCHED_MC=y
 CONFIG_SCHED_SMT=y
 CONFIG_SCHED_CLUSTER=y
 CONFIG_SCHED_CORE=y
+CONFIG_SCHED_AUTOGROUP=y
 
 # ======================
 # 中断与进程调度优化
@@ -56,12 +58,17 @@ CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_PSI=y
-CONFIG_SCHED_AUTOGROUP=y
 CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_BALANCE=y
 CONFIG_IRQ_POLL=y
 CONFIG_GENERIC_PENDING_IRQ=y
+CONFIG_SCHED_THERMAL_PRESSURE=y
+CONFIG_IRQ_FORCED_THREADING_DEFAULT=y
+CONFIG_CPU_ISOLATION=y
+CONFIG_SCHED_MUQSS=n
+CONFIG_SCHED_INFO=y
+CONFIG_SCHEDSTATS=y
 
 # ======================
 # 时间与时钟精度优化
@@ -70,7 +77,7 @@ CONFIG_NO_HZ_IDLE=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ=y
 CONFIG_HZ_300=y
-CONFIG_PREEMPT_NONE=y
+CONFIG_PREEMPT_VOLUNTARY=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 
 # ======================
@@ -88,10 +95,7 @@ CONFIG_CMA_SIZE_MBYTE=384
 CONFIG_CMA_SIZE_PERCENTAGE=20
 CONFIG_DMA_CMA=y
 CONFIG_ZONE_DMA32=y
-CONFIG_NUMA=y
-CONFIG_NUMA_BALANCING=y
 CONFIG_COMPACTION=y
-CONFIG_MEMORY_HOTPLUG=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 
@@ -110,7 +114,6 @@ CONFIG_IGC_DIM=y
 CONFIG_IGC_RSS=y
 CONFIG_IGC_VMDQ=y
 CONFIG_IGC_HWMON=y
-CONFIG_IGC_DEBUG=y
 CONFIG_IGC_VLAN_STRIPPING=y
 CONFIG_IGC_VLAN_INSERTION=y
 CONFIG_IGC_VLAN_FILTERING=y
@@ -136,7 +139,6 @@ CONFIG_NET_VENDOR_INTEL=y
 # DMA与内存映射优化
 # ======================
 CONFIG_DMA_DIRECT_REMAP=y
-CONFIG_DMA_CMA=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_SUPPORT=y
 CONFIG_IOMMU_DEFAULT=y
@@ -154,7 +156,6 @@ CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_PCIEASPM=y
 CONFIG_PCIEASPM_PERFORMANCE=y
 CONFIG_PCIE_PTM=y
-CONFIG_PCI_MSI=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_PCIEAER=y
 CONFIG_PCI_IOV=y
@@ -296,17 +297,10 @@ CONFIG_PACKAGE_kmod-dma-buf=y
 CONFIG_PACKAGE_kmod-dma-heap=y
 
 # ======================
-# 加密与硬件加速 (AES-NI)
+# 加密与硬件加速
 # ======================
-CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_CRYPTO_CRC32C_INTEL=y
-CONFIG_CRYPTO_SHA1_SSSE3=y
-CONFIG_CRYPTO_SHA256_SSSE3=y
 CONFIG_CRYPTO_CRCT10DIF_PCLMUL=y
-CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL=y
-CONFIG_CRYPTO_USER_API=y
-CONFIG_CRYPTO_USER_API_AEAD=y
-CONFIG_CRYPTO_USER_API_SKCIPHER=y
 
 # ======================
 # 用户态工具包 - 硬件监控与优化
@@ -341,5 +335,4 @@ CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-adblock-fast=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
